--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -24,6 +24,11 @@
         <div class="chat-history" id="chat-history">
             <!-- Chat messages will be displayed here -->
         </div>
+        <div class="typing-indicator" id="typing-indicator">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
         <div class="chat-input">
             <input type="text" id="chat-message-input" placeholder="Type your message...">
             <button id="send-chat-message">Send</button>
@@ -44,6 +49,7 @@
     </script>
     <script src="/js/chat.js"></script>
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </body>
 
 </html>
