--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -48,13 +48,14 @@
             Theme
         </button>
         {{#if user}}
-        {{#if isAdmin}}
+        {{#if userRole}}{{#if_eq userRole "admin"}}
         <a href="/admin/dashboard" class="btn btn-primary btn-sm icon-btn">
             <svg class="icon icon-sm" viewBox="0 0 24 24">
                 <path d="M3 13h4v8H3zM10 3h4v18h-4zM17 9h4v12h-4z"></path>
             </svg>
             Admin Dashboard
         </a>
+        {{/if_eq}}
         {{/if}}
         <a href="/auth/logout" class="btn btn-secondary btn-sm btn-logout icon-btn">
             <svg class="icon icon-sm" viewBox="0 0 24 24">
